--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -19,7 +19,7 @@ Dernière modification : 03-06-2020
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
     <a class="navbar-brand" href="index.html"><img src="img/logo.png"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fas fa-bars"></i>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -49,6 +49,38 @@ Dernière modification : 03-06-2020
     </div>
 </nav>
 
+
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/slie_jubile.jpg" height="358" width="1024"/>
+        </div>
+        <div class="carousel-item">
+           <img src="img/Albert_DAVID_SOSSAVI.jpg" height="720" width="960"/>
+        </div>
+        <div class="carousel-item">
+            <img src="ny.jpg" alt="New York">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
+
+</div>
 
 <div class="container-fluid text-center" id="banniere">
     <div class="row">
