--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -14,6 +14,20 @@ Dernière modification : 03-06-2020
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+<header>
+    <div class="overlay"></div>
+    <video playsinline ="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="Daraga Church.mp4" type="video/mp4"  >
+    </video>
+    <div class="container h-100" >
+        <div class="row h-100 text-center align-items-center" >
+            <div class="col-12 text-white" >
+                <h1 class="display-3" >Video Header</h1>
+                <p class="lead mb-0" >With HTML5 Video and Bootstrap 4</p>
+            </div>
+        </div>
+    </div>
+</header>
 <body>
 
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
@@ -50,29 +64,29 @@ Dernière modification : 03-06-2020
 </nav>
 
 
+<!-- Indicators --
+
 <div id="demo" class="carousel slide" data-ride="carousel">
 
-    <!-- Indicators -->
     <ul class="carousel-indicators">
         <li data-target="#demo" data-slide-to="0" class="active"></li>
         <li data-target="#demo" data-slide-to="1"></li>
         <li data-target="#demo" data-slide-to="2"></li>
     </ul>
 
-    <!-- The slideshow -->
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="img/slie_jubile.jpg" height="358" width="1024"/>
+            <img src="img/slie_jubile.jpg" height="450" width="1024"/>
         </div>
         <div class="carousel-item">
-           <img src="img/Albert_DAVID_SOSSAVI.jpg" height="720" width="960"/>
+           <img src="img/Albert_DAVID_SOSSAVI.jpg" height="700" width="1024"/>
         </div>
         <div class="carousel-item">
-            <img src="ny.jpg" alt="New York">
+        <img src="img/VieuxQuebec.JPG" height="450" width="3724"/>
         </div>
     </div>
 
-    <!-- Left and right controls -->
+   Left and right controls --
     <a class="carousel-control-prev" href="#demo" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
     </a>
@@ -81,6 +95,9 @@ Dernière modification : 03-06-2020
     </a>
 
 </div>
+-->
+
+
 
 <div class="container-fluid text-center" id="banniere">
     <div class="row">
