--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <!--
-index.html
-Laurent Drolet
-Dernière modification : 03-06-2020
+index.htm
+Komlan Albert Gblokpor-Koffi
+Albert
+Dernière modification : 14-06-2020
 -->
-<html lang="en">
+ 963,,
+ <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
@@ -14,20 +16,7 @@ Dernière modification : 03-06-2020
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<header>
-    <div class="overlay"></div>
-    <video playsinline ="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="Daraga Church.mp4" type="video/mp4"  >
-    </video>
-    <div class="container h-100" >
-        <div class="row h-100 text-center align-items-center" >
-            <div class="col-12 text-white" >
-                <h1 class="display-3" >Video Header</h1>
-                <p class="lead mb-0" >With HTML5 Video and Bootstrap 4</p>
-            </div>
-        </div>
-    </div>
-</header>
+
 <body>
 
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
@@ -105,8 +94,7 @@ Dernière modification : 03-06-2020
             <!-- Le titre de la banniere-->
          <h1> Bienvenue dans le diocèse de Kpalimé !</h1>
             <hr>
-            <!-- <p>Nous sommes le peuple que sa main conduit. Marchons à la suite du Christ.Le Diocèse de Kpalimé est l'un des 7 diocèses du Togo (Afrique de l'Ouest) . Il couvre une superficie de 6444 km². Le 1er juillet 1994, Kpalimé fut érigé en Diocèse par le pape Saint Jean-Paul II. Le 1er évêque fut Mgr Pierre Koffi SÉSHIE (1994-2000). L’actuel Pasteur du Diocèse est Mgr Benoît Comlan Messan ALOWONOU</p>-->
-            <!-- <button type="button" class="buttonTrouveSurInternet">Get started !</button>-->
+
         </div>
     </div>
 </div>
@@ -156,10 +144,9 @@ Dernière modification : 03-06-2020
 <div class="container-fluid text-center" id="partie4">
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
-            <h2> Partie 2 de l'exercice !</h2>
+            <h2> Nous joindre </h2>
             <hr id="separation3">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but.</p>
-            <button type="button" class="buttonTrouveSurInternet">Get started !</button>
+
         </div>
     </div>
 </div>
