--- a/ExercicePortailCegepThetfordMine/index.html
+++ b/ExercicePortailCegepThetfordMine/index.html
@@ -50,8 +50,25 @@ Dernière modification : 15-06-2020
     </div>
 </nav>
 
+<div class="container-fluid parallax h-100">
+    <div class="row align-items-center h-100">
+        <div class="col-12 text-center">
+            <h1> Bienvenue au CEGEP DE THEFORDMINE</h1>
+        </div>
+    </div>
+</div>
+<div class="container-fluid parallax banniere h-100" id="banniere">
+    <div class="row">
+        <div class="offset-lg-6 col-lg-3 fondJaune" id="Carrejaune">
+            <p>Texte dans le carré jaune</p>
+        </div>
+        <div class="col-lg-12 fondRouge">
+            <p>Texte dans le carré Rouge</p>
+        </div>
+    </div>
+</div>
 
-<div class="container-fluid text-center parallax" id="banniere" >
+<div class="container-fluid parallax text-center " id="banniere1" >
     <div class="row">
         <div class="col-xl-12">
             <!-- Le titre de la banniere-->
