--- a/ExercicePortailCegepThetfordMine/index2.html
+++ b/ExercicePortailCegepThetfordMine/index2.html
@@ -50,13 +50,13 @@ Dernière modification : 15-06-2020
     </div>
 </nav>
 
-<div class="container-fluid parallax banniere h-100" id="banniere">
+<div class="container-fluid parallax">
     <div class="row">
         <div class="offset-lg-6 col-lg-3 fondJaune" id="Carrejaune">
             <p>Texte dans le carré jaune</p>
         </div>
-        <div class="col-lg-12 fondRouge">
-            <p>Texte dans le carré Rouge</p>
+        <div class="container-fluid col-lg-12 fondVert">
+            <p>Texte dans le carré vert </p>
         </div>
     </div>
 </div>
