--- a/ExercicePortailCegepThetfordMine/FormulaireEnvoye.html
+++ b/ExercicePortailCegepThetfordMine/FormulaireEnvoye.html
@@ -1,8 +1,9 @@
-!DOCTYPE html>
+
+<!DOCTYPE html>
 <!--
 index.html
-Albert Gblokpor-Koffi
-Dernière modification : 00-00-2020
+Komlan Albert Gblokpor-Koffi
+Dernière modification : 15-06-2020
 -->
 <html lang="en">
 <head>
@@ -12,8 +13,10 @@ Dernière modification : 00-00-2020
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
     <link rel="icon" type="image/png" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    </script>
 </head>
+
 <body>
 
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
@@ -47,6 +50,16 @@ Dernière modification : 00-00-2020
         </ul>
     </div>
 </nav>
+<form action="http://www.cegepvicto.ca/">
+    <div class="container-fluid">
+        <div class="row">
+            <div>
+                <h1>Les données du formulaires ont été envoyées avec succès </h1>
+            </div>
+        </div>
+    </div>
+    <input type="submit" value="Accéder au site Web du Cégep" />
+</form>
 
 
 
@@ -54,4 +67,4 @@ Dernière modification : 00-00-2020
 <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
 </body>
-</htm
+</htm>
