--- a/DioceseKpalime/diocese.html
+++ b/DioceseKpalime/diocese.html
@@ -43,6 +43,40 @@ Dernière modification : 03-06-2020
     </div>
 </nav>
 
+
+<!--section caroussel- -->
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/jmj.jpg" alt="jmj Kpalime">
+        </div>
+        <div class="carousel-item">
+            <img src="img/Ord" alt="Ordination diaconale">
+        </div>
+        <div class="carousel-item">
+            <img src="img/Banniere.jpg" alt="New York">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
+
+</div>
+
 <div class="container-fluid text-center" id="banniere">
     <div class="row">
         <div class="col-xl-12">
