--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -6,7 +6,7 @@ Albert
 Dernière modification : 15-06-2020
 -->
 
-<html lang="en">
+<html lang="fr">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
@@ -38,11 +38,6 @@ Dernière modification : 15-06-2020
             <li class="nav-item">
                 <a class="nav-link" href="#">Actualités</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Faire un don</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Nous joindre</a>
@@ -50,9 +45,39 @@ Dernière modification : 15-06-2020
         </ul>
     </div>
 </nav>
-<!--section bannière- -->
 
-<!--section bannière- -->
+<!--section caroussel- -->
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/slie_jubile.jpg" alt="jmj Kpalime">
+        </div>
+        <div class="carousel-item">
+            <img src="img/diacres.png" alt="Chicago">
+        </div>
+        <div class="carousel-item">
+            <img src="img/seminariste.jpg" alt="New York">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
+
+</div>
+<!--section bannière-
 <section id="section1">
     <div class="container-fluid text-center" id="banniere">
         <div class="row">
@@ -62,16 +87,14 @@ Dernière modification : 15-06-2020
         </div>
     </div>
 </section>
-
+-->
 <!--section bannière- -->
 <section id="section2">
     <div class="container-fluid text-center parallax" id="partie2">
         <div class="row">
             <div class="col-12 col-xl-6 offset-xl-3">
-                <h2> Bienvenue dans le diocèse de Kpalimé!</h2> <br/>  <h2> Nous sommes le peuple qu"il conduit de sa main </h2>
+                <h1> Bienvenue dans le diocèse de Kpalimé!</h1> <br/>  <h1> Nous sommes le peuple qu"il conduit de sa main </h1>
                 <hr id="separation2">
-
-                <button type="button" class="buttonTrouveSurInternet">Lire la suite !</button>
             </div>
         </div>
     </div>
@@ -81,37 +104,42 @@ Dernière modification : 15-06-2020
     <div class="container  text-center">
         <div class="row" id="atYourService">
             <div class="col-12">
-                <h3> Évenements à venir</h3>
+                <h1> Actualités</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-md-6 col-xl-3  ">
-                <img src="img/Alowonou_Benoit_Buste.jpg" height="245" width="245"/>
-                <h4>Mgr Alowonou</h4>
+                <img src="img/Alowonou_Papae.jpg" height="245" width="245"/>
+                <h4>Mgr Alowonou à Rome</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3  ">
                 <img src="img/Kpalime4.jpg" height="245" width="245"/>
-                <h4> Publications </h4>
+                <h4> Pentécôte 2020 </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3  ">
                 <img src="img/Jubile_Argent0.jpg" height="245" width="245"/>
-                <h4> Enseignement</h4>
+                <h4> Jubilé d'Argent </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 ">
                 <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
-                <h4> Café spirituel</h4>
+                <h4> JMJ à Tohoun </h4>
                 <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
         </div>
     </div>
 
 </section>
 
-    <div class="container-fluid text-center" id="partie4">
+    <div class="container-fluid text-center parallax2" id="partie4">
+
         <div class="row">
             <div class="col-12 col-xl-6 offset-xl-3">
                 <h2> Nous joindre </h2>
@@ -124,7 +152,38 @@ Dernière modification : 15-06-2020
     </div>
 </div>
 
-<div class="container-fluid text-center" id="partie5">
+<section id="section3">
+    <div class="container  text-center">
+        <div class="row" id="Evenement">
+            <div class="col-12">
+                <h1> Évenements à venir</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-xl-3  ">
+                <img src="img/DSCF4743.JPG" height="245" width="245"/>
+                <h4>Mgr Alowonou</h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3  ">
+                <img src="img/ordinationDiaconal.jpg" height="245" width="245"/>
+                <h4> Publications </h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3  ">
+                <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
+                <h4> Enseignement</h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3 ">
+                <img src="img/Kpalime_MgrBarrigah.jpg" height="245" width="245"/>
+                <h4> Café spirituel</h4>
+                <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+            </div>
+        </div>
+    </div>
+<div class="container-fluid text-center" id="partie6">
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
             <h2> Nous joindre </h2>
@@ -135,33 +194,33 @@ Dernière modification : 15-06-2020
         </div>
     </div>
 </div>
+    <div class="piedpage">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div class="col-lg-4 col-sm-10 logo"> <img src="img/logo.png"/>
 
-<!-- Ce sont les colonnes de plusieurs images--
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-        <img src="img/photo.jpeg"/>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
-         </div>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
-        </div>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
-        </div>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
-        </div>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
+                </div>
+                <div class="col-lg-5 col-sm-10 logo">
+                </div>
+                <div class="col-lg-3 col-sm-10 sectionDroiteFooter"><h5>Invesco Habitation</h5>
+                    <p class="footerTexte">Diocèse de Kpalime <br>
+                      Bp 83 Kpalimé Togoß
+                        <br>
+                        Cell: 514 560-6872
+                        <br>
+                        courriel: alowonoubenoit@yahoo.fr</p>
+                    <i class="fab fa-facebook-square"></i>
+                </div>
+            </div>
+            <div class="col-lg-12">
+                <p class="footerTexte2">Diocèse de Kpalime 2020 Tous droits réservés</p>
+            </div>
         </div>
     </div>
-</div>
--->
 
 
-<script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
+
+    <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
 </body>
 </html>
