--- a/DioceseKpalime/actualites.html
+++ b/DioceseKpalime/actualites.html
@@ -29,119 +29,19 @@ Dernière modification : 15-07-2020
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
+            <li class="nav-item ">
+                <a class="nav-link" href="index.html">Accueil</a>
+            </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Diocèse</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Actualités</a>
+                <a class="nav-link" href="#actualites.html">Actualités</a>
             </li>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Nous joindre</a>
+                <a class="nav-link" href="NousJoindre.html">Nous joindre</a>
             </li>
         </ul>
     </div>
 </nav>
-
-<!--section caroussel- -->
-<div id="demo" class="carousel slide" data-ride="carousel">
-
-    <!-- Indicators -->
-    <ul class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
-        <li data-target="#demo" data-slide-to="2"></li>
-    </ul>
-    <!-- The slideshow -->
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="img/slie_jubile.jpg" alt="jmj Kpalime">
-        </div>
-        <div class="carousel-item">
-            <img src="img/diacres.png" alt="Diaconie ">
-        </div>
-        <div class="carousel-item">
-            <img src="img/seminariste.jpg" alt="seminaristes">
-        </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </a>
-
-</div>
-
-<!--section bannière- -->
-<section id="section2">
-    <div class="container-fluid text-center parallax" id="partie2">
-        <div class="row">
-            <div class="col-12 col-xl-6 offset-xl-3">
-                <h1> Bienvenue dans le diocèse de Kpalimé!</h1> <br/>
-                <hr id="separation2">
-                <h1> Nous sommes le peuple qu"il conduit de sa main </h1>
-            </div>
-        </div>
-    </div>
-</section>
-<section id="section3">
-    <div class="container-fluid text-center p-3">
-        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal" >
-            Ordination sacerdotale  Samedi 8 aout 2020 <br> Cliquez pour découvrez nos futurs prêtres
-        </button>
-    </div>
-    <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-center">Nos futurs prêtres</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <h2>Découvrez</h2><p>Nos futurs prêtres</p>
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                        <ul class="carousel-indicators">
-                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#myCarousel" data-slide-to="1"></li>
-                            <li data-target="#myCarousel" data-slide-to="2"></li>
-                        </ul>
-                        <div class="carousel-inner"><div class="carousel-item active">
-                            <img class="img-fluid" src="img/AMEHE.png" alt="Amehe">
-                            <p>Abbé Théodore Améhé </p>
-                        </div>
-                            <div class="carousel-item">
-                                <img class="img-fluid" src="img/PaulDokpo.png" alt="Paul Dokpo">
-                                <p>Abbé Paul Dokpo </p>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="img-fluid" src="img/SetoWenceslas.png" alt="Seto Wenceslas">
-                                <p>Abbé Seto Wenceslas </p>
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                        </a>
-                        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-                            <span class="carousel-control-next-icon"></span>
-                        </a>
-                    </div>
-                    <!-- Fin du carousel -->
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
 
 </section>
 
@@ -149,7 +49,7 @@ Dernière modification : 15-07-2020
     <div class="container  text-center">
         <div class="row" id="Actualites">
             <div class="col-12">
-                <h1> Actualités</h1>
+                <h1> Actualités du diocèse </h1>
                 <hr>
             </div>
         </div>
@@ -161,7 +61,7 @@ Dernière modification : 15-07-2020
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
-                <img src="img/Kpalime4.jpg" height="245" width="245"/>
+                <img src="img/Kpalime7.jpg" height="245" width="245"/>
                 <h4> Pentécôte 2020 </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
@@ -185,46 +85,90 @@ Dernière modification : 15-07-2020
         <hr>
     </div>
 </section>
-<section id="SectionEvenement">
+<section id="SectionParoisses">
     <div class="container  text-center p-3">
-        <div class="row" id="Evenement">
+        <div class="row" id="Evenement1">
             <div class="col-12">
-                <h1> Événements à venir</h1>
+                <h1> Actualités des paroisses </h1>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/DSCF4743.JPG" height="245" width="245"/>
-                <h4>La prochaine JDJ </h4>
+                <h4>Covid 19 : Lettre Cet </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/ordinationDiaconal.jpg" height="245" width="245"/>
-                <h4> Ordination sacerdotale </h4>
+                <h4> Églises ouvertes</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
 
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3">
                 <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
-                <h4> Enseignement</h4>
+                <h4>Confirmation</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Kpalime_MgrBarrigah.jpg" height="245" width="245"/>
-                <h4> Café spirituel</h4>
+                <h4> Programme évêque </h4>
                 <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
         </div>
+        <div class="container text-center p-3">
+            <button type="button" class="btn btn-outline-secondary">Lire les autres actualtités </button>
+            <hr>
+        </div>
     </div>
+    <section id="SectionPresbyterium">
+        <div class="container  text-center p-3">
+            <div class="row" id="Evenement">
+                <div class="col-12">
+                    <h1> Actualités du presbytérium </h1>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                    <img src="img/Monseigneur.jpg" height="245" width="245"/>
+                    <h4>Homélie dimanche</h4>
+                    <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                    <button type="button" class="btn btn-success">Lire la suite</button>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                    <img src="img/rite-admission-diocese-kpalime.jpg" height="245" width="245"/>
+                    <h4> Prise de Soutane</h4>
+                    <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+
+                    <button type="button" class="btn btn-success">Lire la suite</button>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3 p-3">
+                    <img src="img/ucao.jpg" height="245" width="245"/>
+                    <h4>UCAO-UUT</h4>
+                    <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                    <button type="button" class="btn btn-success">Lire la suite</button>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                    <img src="img/Ordination4.jpg" height="245" width="245"/>
+                    <h4> Ordination diaconale </h4>
+                    <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                    <button type="button" class="btn btn-success">Lire la suite</button>
+                </div>
+            </div>
+        </div>
+        <div class="container text-center p-3">
+            <button type="button" class="btn btn-outline-secondary">Lire les autres actualtités </button>
+            <hr>
+        </div>
     <div class="container-fluid text-left" id="partie7">
         <div class="row">
             <div class="col-12 col-xl-6 offset-xl-3">
-                <h2> Laissez-nous un message !</h2>
+                <h2 id="consultation" align="center"> Demande de consultation d'un prêtre !</h2>
                 <form>
                     <div class="container-fluid">
                         <div class="form-row">
@@ -248,12 +192,13 @@ Dernière modification : 15-07-2020
                             </div>
 
                         </div>
-                        <button type="submit" class="btn btn-outline-primary">Soumettre</button>
+                        <button type="submit" class="btn btn-outline-primary">Envoyez</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    </section>
     <div class="piedpage">
         <div class="container-fluid text-center">
             <div class="row">
@@ -289,7 +234,7 @@ Dernière modification : 15-07-2020
             </div>
         </div>
     </div>
-</section>
+
 
 
 <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
