--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -3,7 +3,7 @@
 index.html
 Komlan Albert Gblokpor-Koffi
 Albert
-Dernière modification : 15-07-2020
+Dernière modification : 17-07-2020
 -->
 
 <html lang="fr">
@@ -30,17 +30,14 @@ Dernière modification : 15-07-2020
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Accueil</a>
+                <a class="nav-link" href="index.html">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Diocèse</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Actualités</a>
+                <a class="nav-link" href="actualites.html">Actualités</a>
             </li>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Nous joindre</a>
+                <a class="nav-link" href="NousJoindre.html">Nous joindre</a>
             </li>
         </ul>
     </div>
@@ -83,20 +80,10 @@ Dernière modification : 15-07-2020
     <div class="container-fluid text-center parallax" id="partie2">
         <div class="row">
             <div class="col-12 col-xl-6 offset-xl-3 text-center">
-                <h1 class="TMQ"> Bienvenue dans le diocèse de Kpalimé!</h1> <br/>
+                <h1 > Bienvenue dans le diocèse de Kpalimé!</h1> <br/>
                 <hr id="separation2">
-                <h1 class="TMQ"> Nous sommes le peuple qu"il conduit de sa main </h1>
+                <h1 > Nous sommes le peuple qu"il conduit de sa main </h1>
             </div>
-            <span class="typed-cursor" style="animation-iteration-count: infinite;">
-         </span>
-            <div class="row">
-                <div class="col-lg-12 col-sm-12 text-center">
-                    <div class="typewriter">
-                        <h1 class="TMQ"> </h1>
-                    </div>
-                    <span class="typed-cursor" style="animation-iteration-count: infinite;">
-         </span>
-        </div>
     </div>
 </section>
 <section id="section3">
@@ -233,7 +220,7 @@ Dernière modification : 15-07-2020
 <div class="container-fluid text-left" id="partie7">
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
-            <h2> Laissez-nous un message !</h2>
+            <h2 id="message"> Laissez-nous un message !</h2>
             <form>
                 <div class="container-fluid">
                     <div class="form-row">
@@ -247,7 +234,7 @@ Dernière modification : 15-07-2020
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="inputBp" >Address postale</label>
+                        <label for="inputBp" >Addresse postale</label>
                         <input type="text" class="form-control" id="inputBp" placeholder="Écrivez votre adresse ici">
                     </div>
                     <div class="form-row">
@@ -257,7 +244,7 @@ Dernière modification : 15-07-2020
                         </div>
 
                     </div>
-                    <button type="submit" class="btn btn-outline-primary">Soumettre</button>
+                    <button type="submit" class="btn btn-outline-primary">Envoyez</button>
                 </div>
             </form>
         </div>
